# raindrop

./: .gitignore  Cargo.toml  README.md  game_config.toml
.github/workflows/: rust.yml
asset_manager/: Cargo.toml  Readme.md
asset_manager/src/: asset_info.rs  lib.rs
asset_manager/src/gpu_info/: buffer_gpu_info.rs  image_gpu_info.rs  mod.rs
asset_manager/src/mesh/: mesh_gpu_info.rs  mod.rs  vertex.rs
asset_manager/src/sound/: mod.rs
assets/models/monkey/: monkey.glb
assets/shaders/: tri_mesh.vert
config/: Cargo.toml
config/src/: lib.rs
engine/: Cargo.toml
engine/src/: engine.rs  hook.rs  lib.rs  logging.rs  main.rs  raindrop.rs
engine/src/components/: mod.rs  transform.rs
engine/src/resources/: renderer_resource.rs
engine/src/systems/: player_control_system.rs  renderer_system.rs  spin_system.rs
examples/example1/: Cargo.toml  game_config.toml
examples/example1/src/: main.rs
gpu_info/: Cargo.toml
gpu_info/src/: buffer.rs  image.rs  lib.rs
logger/: Cargo.toml
raindrop/: Cargo.toml
raindrop/src/: engine.rs  lib.rs  raindrop.rs
raindrop/src/components/: audio_source.rs  mesh.rs  mod.rs  player.rs  transform.rs
raindrop/src/resources/: asset_manager_resource.rs  control_input.rs  game_config.rs  mod.rs  physics_manager.rs  renderer_resource.rs
raindrop/src/systems/: mod.rs  player_control_system.rs  renderer_shutdown_system.rs  renderer_system.rs
renderer/: Cargo.toml
renderer/src/: debug.rs  lib.rs  material.rs  mesh.rs  renderable.rs  renderer.rs
renderer/src/boilerplate/: allocator.rs  device.rs  frame_data.rs  instance.rs  mod.rs
renderer/src/primitives/: allocated_image.rs  command_manager.rs  mod.rs  pipeline.rs  queue.rs  shader.rs  surface.rs  swapchain.rs
shaders/: colored_triangle.frag  triangle.frag  triangle.vert
src/: config.rs  main.rs  vk_engine.rs
src/engine/: engine.rs  hook.rs  mod.rs
src/engine/assets/: asset.rs  mod.rs
src/engine/components/: camera.rs  material.rs  mod.rs  player.rs  transform.rs
src/engine/renderer/: debug.rs  material.rs  mesh.rs  mod.rs  render_object.rs  renderer.rs
src/engine/renderer/boilerplate/: allocator.rs  instance.rs  mod.rs  physical_device.rs
src/engine/renderer/primitives/: allocated_buffer.rs  command_manager.rs  mod.rs  pipeline.rs  queue.rs  swapchain.rs
src/engine/renderer/structs/: command_manager.rs  mod.rs  pipeline.rs  queue.rs  queues.rs  shader.rs  surface.rs  swapchain.rs
src/engine/resources/: asset_manager.rs  control_input.rs  mod.rs  renderer_resource.rs  time.rs
src/engine/systems/: mod.rs  player_control_system.rs  renderer_system.rs  spin_system.rs
