[package]
name = "vkguide_rust"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.37.3", features = ["linked"] }
ash-window = "0.12.0"
game-loop = { version = "1.0.1", features = ["winit"] }
lazy_static = "1.4.0"
log = "0.4.20"
raw-window-handle = "0.5.2"
serde = "1.0.196"
serde_derive = "1.0.196"
shaderc = "0.8.3"
simplelog = "0.12.1"
spirv_cross = "0.23.1"
toml = "0.8.9"
winit = "0.28"
