[package]
name = "asset_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.38"
gltf = "1.4.0"
log = "0.4.20"
nalgebra = { version = "0.32.3", features = ["serde-serialize"] }
nalgebra-glm = { version = "0.18.0", features = ["serde-serialize"] }
rand = "0.8.5"
rodio = "0.17.3"
vk-mem = { git = "https://github.com/gwihlidal/vk-mem-rs/", rev = "56228c9" }
