[package]
name = "asset_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
gpu_info = { path = "../gpu_info" }

gltf = "1.4.0"
log = "0.4.20"
nalgebra = { version = "0.33.0", features = ["serde-serialize"] }
nalgebra-glm = { version = "0.19.0", features = ["serde-serialize"] }
rand = "0.8.5"
rodio = "0.19.0"
