[package]
name = "raindrop"
version = "0.1.0"
edition = "2021"

[dependencies]
asset_manager = { path = "../asset_manager" }
config = { path = "../config" }
logger = { path = "../logger" }
renderer = { path = "../renderer" }

bevy_ecs = { version = "0.14.1", features = ["multi_threaded", "trace"] }
game-loop = { version = "1.2.0", features = ["winit"] }
log = "0.4.20"
nalgebra = { version = "0.33.0", features = ["serde-serialize"] }
nalgebra-glm = { version = "0.19.0", features = ["serde-serialize"] }
winit = "0.30"
rapier3d = "0.22.0"
