[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
config = { path = "../config" }

ash = { version = "0.38", features = ["linked"] }
ash-window = "0.13"
bincode = "1.3.3"
gltf = "1.4.0"
lazy_static = "1.4.0"
log = "0.4.20"
memoffset = "0.9.0"
nalgebra = { version = "0.32.3", features = ["serde-serialize"] }
nalgebra-glm = { version = "0.18.0", features = ["serde-serialize"] }
rand = "0.8.5"
raw-window-handle = "0.6"
serde = "1.0.196"
serde_derive = "1.0.196"
shaderc = "0.8.3"
vk-mem = { git = "https://github.com/adrien-ben/vk-mem-rs/", branch = "ash_0.38" }
winit = "0.29"
